--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.6.0
 Django==3.2
 django-allauth==0.41.0
+django-humanize==0.1.2
+humanize==4.6.0
 oauthlib==3.2.2
 Pillow==9.5.0
 python3-openid==3.2.0
