--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.6.0
+crispy-bootstrap5==0.7
 Django==3.2
 django-allauth==0.41.0
+django-crispy-forms==2.0
 django-humanize==0.1.2
 humanize==4.6.0
 oauthlib==3.2.2
