--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+coverage==7.2.5
 crispy-bootstrap5==0.7
 Django==3.2
 django-allauth==0.41.0
@@ -13,3 +14,4 @@ pytz==2023.3
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
 stripe==5.4.0
+tenacity==8.2.2
