--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 coverage==7.2.5
 crispy-bootstrap5==0.7
+dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
 django-countries==7.2.1
@@ -9,6 +10,7 @@ django-humanize==0.1.2
 humanize==4.6.0
 oauthlib==3.2.2
 Pillow==9.5.0
+psycopg2==2.9.6
 python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
