--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==2.0
 django-humanize==0.1.2
+gunicorn==20.1.0
 humanize==4.6.0
 oauthlib==3.2.2
 Pillow==9.5.0
