--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.6.0
+boto3==1.26.132
+botocore==1.29.132
 coverage==7.2.5
 crispy-bootstrap5==0.7
 dj-database-url==0.5.0
@@ -7,14 +9,17 @@ django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==2.0
 django-humanize==0.1.2
+django-storages==1.13.2
 gunicorn==20.1.0
 humanize==4.6.0
+jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.5.0
 psycopg2==2.9.6
 python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
+s3transfer==0.6.1
 sqlparse==0.4.3
 stripe==5.4.0
 tenacity==8.2.2
