--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
-exclude = */migrations/*.py, *__init__.py, *_pychache_*, .vscode,
-per-file-ignores = *settings.py:E501
+exclude = */migrations/*.py, *__init__.py, *_pychache_*, .vscode, *settings.py*,
+per-file-ignores = *apps.py:F401, *env.py:E501
